test/sema/exercise/struct_member_mutation_grouping.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S<T> {
  x: T
}

fn main(): unit {
  let s = S{ x: S{ x: 1 } };
  
  // CHECK: [[# @LINE + 1 ]]:15: error: 's' cannot be mutated
  (((s.x).x)) = 2;
}
